# Testing
#
# Copyright (c) 1996, 1997, 1998, 1999
#	Transvirtual Technologies, Inc.  All rights reserved.
#
# See the file "license.terms" for information on usage and redistribution 
# of this file. 

SUBDIRS = regression

EXTRA_DIST = \
	awt/Calc/Calc.java awt/Calc/Calc.sh awt/Calc/Calc.class \
	awt/TextEdit/README  awt/TextEdit/copyright.txt \
	awt/TextEdit/TextEdit.sh awt/TextEdit/TextEdit.jar \
	awt/Unico/README awt/Unico/readme.txt awt/Unico/Unico.class \
	awt/Unico/unico.jar awt/Unico/unico.sh \
	awt/WidgetsDemo/README awt/WidgetsDemo/*.java awt/WidgetsDemo/*.class \
	awt/WidgetsDemo/WidgetsDemo.sh awt/WidgetsDemo/*.jpg
