# Testing
#
# Copyright (c) 1996, 1997, 1998, 1999
#	Transvirtual Technologies, Inc.  All rights reserved.
#
# See the file "license.terms" for information on usage and redistribution 
# of this file. 

if HAVE_JIKES
INTERNAL_TEST = internal
endif

SUBDIRS = $(INTERNAL_TEST) regression jni

DIST_SUBDIRS = internal regression jni

EXTRA_DIST = \
	awt/Calc/Calc.java \
	awt/Calc/Calc.sh \
	awt/TextEdit/README \
	awt/TextEdit/TextEdit.jar \
	awt/TextEdit/TextEdit.sh \
	awt/TextEdit/copyright.txt \
	awt/Unico/README \
	awt/Unico/Unico.class \
	awt/Unico/readme.txt \
	awt/Unico/unico.jar \
	awt/Unico/unico.sh \
	awt/WidgetsDemo/DemoImageDict.java \
	awt/WidgetsDemo/README \
	awt/WidgetsDemo/WidgetsDemo.java \
	awt/WidgetsDemo/WidgetsDemo.sh \
	awt/WidgetsDemo/back.jpg \
	awt/WidgetsDemo/forward.jpg \
	awt/WidgetsDemo/hand.up.jpg \
	awt/WidgetsDemo/transfer.jpg \
	awt/WidgetsDemo/kaffe_powered.png
