# Testing
#
# Copyright (c) 1996, 1997, 1998, 1999
#	Transvirtual Technologies, Inc.  All rights reserved.
#
# See the file "license.terms" for information on usage and redistribution 
# of this file. 

if HAVE_JIKES
INTERNAL_TEST = internal
endif

SUBDIRS = $(INTERNAL_TEST) regression jni

DIST_SUBDIRS = internal regression jni

EXTRA_DIST = \
	awt/WidgetsDemo/README \
	awt/WidgetsDemo/WidgetsDemo.java \
	awt/WidgetsDemo/WidgetsDemo.sh \
	awt/WidgetsDemo/back.jpg \
	awt/WidgetsDemo/forward.jpg \
	awt/WidgetsDemo/hand.up.jpg \
	awt/WidgetsDemo/transfer.jpg \
	awt/WidgetsDemo/kaffe_powered.png
