# Base level Makefile.in for kaffe.
#
# Copyright (c) 1996, 1997, 1998, 1999
#	Transvirtual Technologies, Inc.  All rights reserved.
#
# See the file "license.terms" for information on usage and redistribution 
# of this file. 

if COND_GJDOC
MAYBE_GJDOC=gjdoc
endif

if COND_CLASSPATH_TOOLS
MAYBE_CLASSPATH_TOOLS=javatools
endif

SUBDIRS = $(MAYBE_GJDOC) $(MAYBE_CLASSPATH_TOOLS)
