# Manual pages
#
# Copyright (c) 1996, 1997, 1998, 1999
#	Transvirtual Technologies, Inc.  All rights reserved.
#
# See the file "license.terms" for information on usage and redistribution 
# of this file. 

man_MANS = kaffe.1

EXTRA_DIST = \
	kaffe.1.xml

kaffe.1.in: kaffe.1.xml
	xmltoman kaffe.1.xml > kaffe.1.in
